Actualicé información personal y experiencia

--- a/index.html
+++ b/index.html
@@ -35,8 +35,18 @@
                         <p><strong>Teléfono:</strong> +52 81 1915 8987</p>
                         <p><strong>Email:</strong> <a href="mailto:enrique.pdlg02@gmail.com" class="text-blue-500 hover:underline">enrique.pdlg02@gmail.com</a></p>
                         <p><strong>Ubicación:</strong> Monterrey, Nuevo León</p>
-                        <p><strong>LinkedIn:</strong> <a href="#" class="text-blue-500 hover:underline">Tu LinkedIn (Pendiente)</a></p>
-                        <p><strong>GitHub:</strong> <a href="#" class="text-blue-500 hover:underline">Tu GitHub (Pendiente)</a></p>
+                        
+                        <p><strong>LinkedIn:</strong> 
+                            <a href="https://www.linkedin.com/in/enrique-jair-pablo-de-la-garza-378064354/" target="_blank" class="text-blue-500 hover:underline block truncate">
+                                Ver Perfil
+                            </a>
+                        </p>
+                        
+                        <p><strong>GitHub:</strong> 
+                            <a href="https://github.com/enriquedelaGarza06" target="_blank" class="text-blue-500 hover:underline block truncate">
+                                github.com/enriquedelaGarza06
+                            </a>
+                        </p>
                     </div>
                 </section>
 
