Added profile picture and static assets config

--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
 
     <div class="container max-w-5xl mx-auto my-8 sm:my-12 p-6 sm:p-10 bg-white dark:bg-gray-800 shadow-2xl rounded-lg">
 
-        <header class="text-center mb-10 pb-6 border-b border-gray-200 dark:border-gray-700">
-            <h1 class="text-4xl md:text-5xl font-bold text-gray-800 dark:text-white">Enrique Jair Pablo de la Garza</h1>
-            <h2 class="text-xl md:text-2xl font-light text-blue-600 dark:text-blue-400 mt-2">QA Tester Manual | Analista de Soporte Técnico</h2>
-        </header>
+       <header class="text-center mb-10 pb-6 border-b border-gray-200 dark:border-gray-700">
+    
+    <div class="mb-4">
+        <img src="/images/profile.jpg" alt="Profile Picture" 
+             class="w-32 h-32 mx-auto rounded-full object-cover border-4 border-blue-500 shadow-lg">
+    </div>
 
+    <h1 class="text-4xl md:text-5xl font-bold text-gray-800 dark:text-white">Enrique Jair Pablo de la Garza</h1>
+    <h2 class="text-xl md:text-2xl font-light text-blue-600 dark:text-blue-400 mt-2">QA Tester Manual | Analista de Soporte Técnico</h2>
+</header>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-x-12">
 
             <aside class="md:col-span-1 mb-10 md:mb-0">
