--- a/index.html
+++ b/index.html
@@ -17,6 +17,24 @@
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-700 dark:text-gray-300 antialiased">
+    <nav class="bg-white dark:bg-gray-800 shadow-md sticky top-0 z-50 mb-8">
+    <div class="container max-w-5xl mx-auto px-6 py-4 flex justify-between items-center">
+        
+        <a href="/" class="text-lg font-bold text-blue-600 dark:text-blue-400 hover:text-blue-800 transition">
+            Enrique de la Garza
+        </a>
+
+        <div class="space-x-6 text-sm font-medium">
+            <a href="/" class="text-gray-600 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition">
+                Inicio
+            </a>
+            <a href="/sobre_mi" class="text-gray-600 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition">
+                Sobre Mí
+            </a>
+        </div>
+
+    </div>
+</nav>
 
     <div class="container max-w-5xl mx-auto my-8 sm:my-12 p-6 sm:p-10 bg-white dark:bg-gray-800 shadow-2xl rounded-lg">
 
