--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-700 dark:text-gray-300 antialiased">
-    <nav class="bg-white dark:bg-gray-800 shadow-md sticky top-0 z-50 mb-8">
+ <nav class="bg-white dark:bg-gray-800 shadow-md sticky top-0 z-50 mb-8">
     <div class="container max-w-5xl mx-auto px-6 py-4 flex justify-between items-center">
         
         <a href="/" class="text-lg font-bold text-blue-600 dark:text-blue-400 hover:text-blue-800 transition">
@@ -26,10 +26,10 @@
 
         <div class="space-x-6 text-sm font-medium">
             <a href="/" class="text-gray-600 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition">
-                Inicio
+                Home
             </a>
             <a href="/sobre_mi" class="text-gray-600 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition">
-                Sobre Mí
+                About Me
             </a>
         </div>
 
