--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -26,10 +26,10 @@
 
         <div class="space-x-6 text-sm font-medium">
             <a href="/" class="text-gray-600 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition">
-                Inicio
+                Home
             </a>
             <a href="/sobre_mi" class="text-gray-600 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition">
-                Sobre Mí
+                About Me
             </a>
         </div>
 
