--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -17,7 +17,8 @@
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-700 dark:text-gray-300 antialiased">
-    <nav class="bg-white dark:bg-gray-800 shadow-md sticky top-0 z-50 mb-8">
+
+<nav class="sticky top-0 z-50 mb-8 border-b border-gray-200 dark:border-gray-700 bg-white/70 dark:bg-gray-900/70 backdrop-blur-md shadow-sm transition-all duration-300">
     <div class="container max-w-5xl mx-auto px-6 py-4 flex justify-between items-center">
         
         <a href="/" class="text-lg font-bold text-blue-600 dark:text-blue-400 hover:text-blue-800 transition">
@@ -85,3 +86,21 @@
                 </div>
             </section>
         </main>
+    </div> <footer class="bg-gray-50 dark:bg-gray-900 border-t border-gray-200 dark:border-gray-800 mt-12">
+    <div class="container mx-auto px-6 py-8 text-center">
+        <p class="text-gray-600 dark:text-gray-400 text-sm">
+            &copy; 2025 Enrique de la Garza. All rights reserved.
+        </p>
+        <div class="mt-4 space-x-4">
+            <a href="https://github.com/enriquedelaGarza06" target="_blank" class="text-gray-500 hover:text-blue-600 transition">
+                GitHub
+            </a>
+            <a href="https://linkedin.com" target="_blank" class="text-gray-500 hover:text-blue-600 transition">
+                LinkedIn
+            </a>
+        </div>
+    </div>
+</footer>
+
+</body>
+</html>
