--- a/index.html
+++ b/index.html
@@ -16,15 +16,25 @@
         .dark .shadow-2xl { box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25), 0 0 15px rgba(0,0,0,0.5); }
     </style>
 </head>
+
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-700 dark:text-gray-300 antialiased">
- <nav class="sticky top-0 z-50 mb-8 border-b border-gray-200 dark:border-gray-700 bg-white/70 dark:bg-gray-900/70 backdrop-blur-md shadow-sm transition-all duration-300"></nav>
+<nav class="sticky top-0 z-50 mb-8 border-b border-gray-200 dark:border-gray-700 bg-white/70 dark:bg-gray-900/70 backdrop-blur-md shadow-sm transition-all duration-300">
     <div class="container max-w-5xl mx-auto px-6 py-4 flex justify-between items-center">
         
         <a href="/" class="text-lg font-bold text-blue-600 dark:text-blue-400 hover:text-blue-800 transition">
             Enrique de la Garza
         </a>
 
-        <div class="space-x-6 text-sm font-medium">
+        <div class="md:hidden">
+            <button id="menu-btn" class="text-gray-600 dark:text-gray-300 focus:outline-none">
+                <ion-icon name="menu-outline" class="text-3xl"></ion-icon>
+            </button>
+        </div>
+
+        <div id="menu" class="hidden md:flex space-x-6 text-sm font-medium">
             <a href="/" class="text-gray-600 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition">
                 Home
             </a>
@@ -34,7 +44,26 @@
         </div>
 
     </div>
-</nav>
+
+    <div id="mobile-menu" class="hidden md:hidden border-t border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-900">
+        <a href="/" class="block px-6 py-3 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 hover:text-blue-600 transition">
+            Home
+        </a>
+        <a href="/sobre_mi" class="block px-6 py-3 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 hover:text-blue-600 transition">
+            About Me
+        </a>
+    </div>
+
+    <script>
+        const menuBtn = document.getElementById('menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        menuBtn.addEventListener('click', () => {
+            // Alternar la clase 'hidden' para mostrar u ocultar
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
+</nav> 
 
     <div class="container max-w-5xl mx-auto my-8 sm:my-12 p-6 sm:p-10 bg-white dark:bg-gray-800 shadow-2xl rounded-lg">
 
