--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -25,16 +25,24 @@
             Enrique de la Garza
         </a>
 
-        <div class="space-x-6 text-sm font-medium">
-            <a href="/" class="text-gray-600 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition">
-                Home
-            </a>
-            <a href="/sobre_mi" class="text-gray-600 dark:text-gray-300 hover:text-blue-600 dark:hover:text-blue-400 transition">
-                About Me
-            </a>
-        </div>
-
+    <div id="mobile-menu" class="hidden md:hidden border-t border-gray-200 dark:border-gray-700 bg-white dark:bg-gray-900">
+        <a href="/" class="block px-6 py-3 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 hover:text-blue-600 transition">
+            Home
+        </a>
+        <a href="/sobre_mi" class="block px-6 py-3 text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-800 hover:text-blue-600 transition">
+            About Me
+        </a>
     </div>
+
+    <script>
+        const menuBtn = document.getElementById('menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        menuBtn.addEventListener('click', () => {
+            // Alternar la clase 'hidden' para mostrar u ocultar
+            mobileMenu.classList.toggle('hidden');
+        });
+    </script>
 </nav>
 
     <div class="container max-w-5xl mx-auto my-8 p-6 sm:p-10 bg-white dark:bg-gray-800 shadow-2xl rounded-lg">
